--- a/index.css
+++ b/index.css
@@ -1,8 +1,5 @@
 #app{
-display: flex;
-flex-direction: column;
-justify-content: center;
-div {
-  background-color: blue;
-}
-}
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  }
